--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
+    "i": "^0.3.7",
+    "lucide-react": "^0.552.0",
     "next": "15.5.6",
+    "npm": "^11.6.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
